--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <excludes>
+                        **/*DeviceTest.java
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
                 <!-- ${project.build.outputDirectory}/git.properties is generated at compile time -->
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
